apps/gzac-frontend/additionalmanifests/local/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gzac-frontend
  namespace: publicground
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-local
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - "gzac.wigo4it.nl"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: gzac-frontend
          port: 8080
          weight: 1
